name:              dohaskell
synopsis:          Tagged Haskell resources index website.
version:           0.0.1.0
license:           BSD3
license-file:      LICENSE
author:            Mitchell Rosen
maintainer:        mitchellwrosen@gmail.com
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src
    exposed-modules: Application
                     Database.Persist.Class.Extra
                     Import
                     Foundation
                     Handler.About
                     Handler.Api.Resource
                     Handler.Browse
                     Handler.EditResourceRequest
                     Handler.Feed
                     Handler.Resource
                     Handler.ReqEditsHub
                     Handler.Submit
                     Handler.User
                     Handler.Utils
                     Model
                     Model.Author
                     Model.Browse
                     Model.Feed
                     Model.Feed.Internal
                     Model.Resource
                     Model.Resource.Internal
                     Model.ResourceEdit
                     Model.Tag
                     Model.User
                     Model.Utils
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     View.Browse
                     View.Feed
                     View.Navbar
                     View.Resource
                     View.User
                     Yesod.Form.Types.Extra

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                LambdaCase
                MultiParamTypeClasses
                MultiWayIf
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TypeFamilies

    build-depends: base                          >= 4       && < 5
                 , aeson                         >= 0.6     && < 0.8
                 , async                         >= 2.0     && < 2.1
                 , attoparsec                    >= 0.11    && < 1.0
                 , blaze-markup                  >= 0.6     && < 1.0
                 , bytestring                    >= 0.9     && < 0.11
                 , conduit                       >= 1.0     && < 2.0
                 , containers                    >= 0.5     && < 0.6
                 , data-default                  >= 0.5     && < 0.6
                 , directory                     >= 1.1     && < 1.3
                 , dlist                         >= 0.7     && < 0.8
                 , esqueleto                     >= 1.4     && < 1.5
                 , fast-logger                   >= 2.1.4   && < 2.2
                 , feed                          >= 0.3.9   && < 0.4.0
                 , hjsmin                        >= 0.1     && < 0.2
                 , http-client                   >= 0.3.0   && < 0.4.0
                 , http-conduit                  >= 2.1     && < 2.2
                 , http-types                    >= 0.8.0   && < 0.9.0
                 , lens                          >= 4.0     && < 4.5
                 , lifted-base                   >= 0.2     && < 0.3
                 , monad-control                 >= 0.3     && < 0.4
                 , monad-logger                  >= 0.3     && < 0.4
                 , persistent                    >= 1.3     && < 1.4
                 , persistent-sqlite             >= 1.3     && < 1.4
                 , persistent-template           >= 1.3     && < 1.4
                 , resourcet                     >= 1.1     && < 1.2
                 , shakespeare                   >= 2.0     && < 2.1
                 , split                         >= 0.2     && < 0.3
                 , template-haskell              >= 2.9     && < 3.0
                 , text                          >= 0.11    && < 2.0
                 , time                          >= 1.4     && < 1.5
                 , transformers                  >= 0.3     && < 0.5
                 , wai-extra                     >= 2.1     && < 2.2
                 , wai-logger                    >= 2.1     && < 2.2
                 , warp                          >= 2.1     && < 2.2
                 , wreq                          >= 0.1.0.1 && < 0.2
                 , xml                           >= 1.3     && < 1.4
                 , yaml                          >= 0.8     && < 0.9
                 , yesod                         >= 1.2.5   && < 1.3
                 , yesod-auth                    >= 1.3     && < 1.4
                 , yesod-core                    >= 1.2.12  && < 1.3
                 , yesod-form                    >= 1.3     && < 1.4
                 , yesod-static                  >= 1.2     && < 1.3

executable         dohaskell
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , dohaskell
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , dohaskell
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
