name:              dohaskell
synopsis:          Tagged Haskell resources index website.
version:           0.0.1.0
license:           BSD3
license-file:      LICENSE
author:            Mitchell Rosen
maintainer:        mitchellwrosen@gmail.com
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: src
    exposed-modules: Application
                     Database.Persist.Class.Extra
                     Data.Tree.Extra
                     Import
                     Foundation
                     Handler.About
                     Handler.Api.Resource
                     Handler.Browse
                     Handler.Common
                     Handler.EditResourceRequest
                     Handler.Feed
                     Handler.Resource
                     Handler.ReqEditsHub
                     Handler.Submit
                     Handler.User
                     Handler.Utils
                     Model
                     Model.Author
                     Model.Browse
                     Model.Collection
                     Model.Feed
                     Model.Feed.Internal
                     Model.List
                     Model.Resource
                     Model.Resource.Internal
                     Model.ResourceEdit
                     Model.Tag
                     Model.User
                     Model.Utils
                     Settings
                     Settings.StaticFiles
                     View.Browse
                     View.Feed
                     View.Navbar
                     View.Resource
                     View.User
                     Yesod.Form.Types.Extra

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: CPP
                DeriveDataTypeable
                EmptyDataDecls
                FlexibleContexts
                FlexibleInstances
                GADTs
                GeneralizedNewtypeDeriving
                LambdaCase
                MultiParamTypeClasses
                MultiWayIf
                NoImplicitPrelude
                NoMonomorphismRestriction
                OverloadedStrings
                QuasiQuotes
                RecordWildCards
                ScopedTypeVariables
                TemplateHaskell
                TypeFamilies
                ViewPatterns

    build-depends: base >= 4 && < 5
                 , aeson
                 , async
                 , attoparsec
                 , blaze-markup
                 , bytestring
                 , classy-prelude-yesod
                 , conduit
                 , containers
                 , data-default
                 , directory
                 , dlist
                 , esqueleto
                 , fast-logger
                 , file-embed
                 , feed
                 , hjsmin
                 , http-client
                 , http-conduit
                 , http-types
                 , lens
                 , lifted-base
                 , monad-control
                 , monad-logger
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , resourcet
                 , shakespeare
                 , split
                 , template-haskell
                 , text
                 , time
                 , transformers
                 , wai-extra
                 , wai-logger
                 , warp
                 , wreq
                 , xml
                 , yaml
                 , yesod
                 , yesod-auth
                 , yesod-core
                 , yesod-form
                 , yesod-markdown
                 , yesod-static

executable         dohaskell
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , dohaskell
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , dohaskell
                 , yesod-test
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
